support mermaid diagram

--- a/src/resources/vnote.ini
+++ b/src/resources/vnote.ini
@@ -13,6 +13,7 @@ language=System
 editor_font_size=12
 ; 0 - Hoedown, 1 - Marked, 2 - Markdown-it
 markdown_converter=2
+enable_mermaid=true
 
 [session]
 tools_dock_checked=true
